# insert-license-header

./: .gitignore  .pre-commit-hooks.yaml  CHANGES.rst  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: build.yml  ci.yml
insert_license_header/: insert_license.py
pre_commit_insert_qc_license/: insert_license.py
tests/: insert_license_test.py
