[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insert-license-header"
description = "Tool to insert license headers at the beginning of text-based files."
readme = "README.md"
version = "1.3.0"
license = "MIT"
authors = [
  {name = "Thomas Marwitz", email = "thomasmarwitz3@gmail.com"},
  {name = "Lucas Cimon", email = "lucas.cimon@gmail.com"},
]
dependencies = [
    "rapidfuzz"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
repository = "https://github.com/insert-license-header"

[tool.hatch.build.targets.sdist]
include = [
    "/insert_license_header",
]

[project.scripts]
insert-license = "insert_license_header.insert_license:main"
